Doctor Appointment Arabic Version

--- a/client/public/languages/AppointmentAr_ar.json
+++ b/client/public/languages/AppointmentAr_ar.json
@@ -1,11 +1,40 @@
 {
   "department_name": "اسم القسم",
+  "patient_code": "رمز المريض",
+  "registration_date": "تاريخ التسجيل",
+  "registered_date": "تاريخ التسجيل",
+  "title_id": "العنوان",
+  "first_name": "الاسم الاول",
+  "middle_name": "الاسم الأوسط",
+  "last_name": "اسم العائلة",
+  "full_name": "اسم",
+  "enter_eng_fullName": "أدخل الاسم باللغة الإنجليزية",
+  "arabic_name": "أدخل الاسم باللغة العربية",
+  "gender": "الجنس",
+  "date_of_birth": "تاريخ الميلاد",
+  "age": "العمر",
+  "contact_number": "رقم الجوال",
+  "email": "عنوان البريد الإلكتروني",
+  "btn_save": "حفظ",
+  "btn_update": "تحديث",
+  "btn_close": "قريب",
+  "btn_clear": "واضح",
+  "btn_advance": "تقدم",
+  "btn_refund": "إعادة مال",
   "filterbyDoctor": "تصفية حسب الطبيب",
   "loadData": "تحميل البيانات",
   "doctorsAvailability": "توافر الأطباء",
   "roomNo": "رقم الغرفة",
   "booked": "حجز",
-  "StandBy": "تعليق",
+  "standBy": "تعليق",
   "doctorLeave": "طبيب في إجازة",
-  "noDoctorAvail": "لا يوجد أطباء متاحون للمعايير المختارة"
+  "noDoctorAvail": "لا يوجد أطباء متاحون للمعايير المختارة",
+  "appDate": "موعد موعد",
+  "appTime": "وقت الموعد",
+  "selectStatus": "اختر الحالة",
+  "selectSlot": "حدد فتحات",
+  "remarks": "ملاحظات",
+  "bookAppo": "كتاب وتعيين",
+  "editAppo": "تعديل الموعد",
+  "today": "اليوم"
 }
