--- a/client/public/languages/Appointment_ar.json
+++ b/client/public/languages/Appointment_ar.json
@@ -1,11 +1,39 @@
 {
   "department_name": "اسم القسم",
+  "patient_code": "Patient Code",
+  "registration_date": "Registration Date",
+  "title_id": "Title",
+  "first_name": "First Name",
+  "middle_name": "Middle Name",
+  "last_name": "Last Name",
+  "full_name": "Name",
+  "arabic_name": "Name in Arabic",
+  "gender": "Gender",
+  "date_of_birth": "Date Of Birth",
+  "age": "Age",
+  "contact_number": "Mobile Number",
+  "email": "Email Address",
+  "btn_save": "Save",
+  "btn_clear": "Clear",
+  "form_home": "Home",
+  "form_create": "Create New",
+  "form_yes": "Yes",
+  "form_no": "No",
+  "patient_type": "Patient Type",
   "filterbyDoctor": "تصفية حسب الطبيب",
   "loadData": "تحميل البيانات",
   "doctorsAvailability": "توافر الأطباء",
   "roomNo": "رقم الغرفة",
   "booked": "حجز",
-  "StandBy": "تعليق",
+  "standBy": "تعليق",
   "doctorLeave": "طبيب في إجازة",
-  "noDoctorAvail": "لا يوجد أطباء متاحون للمعايير المختارة"
+  "noDoctorAvail": "لا يوجد أطباء متاحون للمعايير المختارة",
+  "appDate": "موعد موعد",
+  "appTime": "وقت الموعد",
+  "selectStatus": "اختر الحالة",
+  "selectSlot": "حدد فتحات",
+  "remarks": "ملاحظات",
+  "bookAppo": "كتاب وتعيين",
+  "editAppo": "تعديل الموعد",
+  "today": "اليوم"
 }
