Arabic Version for Doctor Appo.

--- a/client/public/languages/AppointmentAr_ar.json
+++ b/client/public/languages/AppointmentAr_ar.json
@@ -29,8 +29,8 @@
   "standBy": "تعليق",
   "doctorLeave": "طبيب في إجازة",
   "noDoctorAvail": "لا يوجد أطباء متاحون للمعايير المختارة",
-  "appDate": "موعد موعد",
-  "appTime": "وقت الموعد",
+  "appoDate": "موعد موعد",
+  "appoTime": "وقت الموعد",
   "selectStatus": "اختر الحالة",
   "selectSlot": "حدد فتحات",
   "remarks": "ملاحظات",
