--- a/client/public/languages/Appointment_ar.json
+++ b/client/public/languages/Appointment_ar.json
@@ -1,25 +1,26 @@
 {
   "department_name": "اسم القسم",
-  "patient_code": "Patient Code",
-  "registration_date": "Registration Date",
-  "title_id": "Title",
-  "first_name": "First Name",
-  "middle_name": "Middle Name",
-  "last_name": "Last Name",
-  "full_name": "Name",
-  "arabic_name": "Name in Arabic",
-  "gender": "Gender",
-  "date_of_birth": "Date Of Birth",
-  "age": "Age",
-  "contact_number": "Mobile Number",
-  "email": "Email Address",
-  "btn_save": "Save",
-  "btn_clear": "Clear",
-  "form_home": "Home",
-  "form_create": "Create New",
-  "form_yes": "Yes",
-  "form_no": "No",
-  "patient_type": "Patient Type",
+  "patient_code": "رمز المريض",
+  "registration_date": "تاريخ التسجيل",
+  "registered_date": "تاريخ التسجيل",
+  "title_id": "العنوان",
+  "first_name": "الاسم الاول",
+  "middle_name": "الاسم الأوسط",
+  "last_name": "اسم العائلة",
+  "full_name": "اسم",
+  "enter_eng_fullName": "أدخل الاسم باللغة الإنجليزية",
+  "arabic_name": "أدخل الاسم باللغة العربية",
+  "gender": "الجنس",
+  "date_of_birth": "تاريخ الميلاد",
+  "age": "العمر",
+  "contact_number": "رقم الجوال",
+  "email": "عنوان البريد الإلكتروني",
+  "btn_save": "حفظ",
+  "btn_update": "تحديث",
+  "btn_close": "قريب",
+  "btn_clear": "واضح",
+  "btn_advance": "تقدم",
+  "btn_refund": "إعادة مال",
   "filterbyDoctor": "تصفية حسب الطبيب",
   "loadData": "تحميل البيانات",
   "doctorsAvailability": "توافر الأطباء",
@@ -28,8 +29,8 @@
   "standBy": "تعليق",
   "doctorLeave": "طبيب في إجازة",
   "noDoctorAvail": "لا يوجد أطباء متاحون للمعايير المختارة",
-  "appDate": "موعد موعد",
-  "appTime": "وقت الموعد",
+  "appoDate": "موعد موعد",
+  "appoTime": "وقت الموعد",
   "selectStatus": "اختر الحالة",
   "selectSlot": "حدد فتحات",
   "remarks": "ملاحظات",
