--- a/client/public/languages/Appointment_en.json
+++ b/client/public/languages/Appointment_en.json
@@ -24,14 +24,14 @@
   "form_no": "No",
   "filterbyDoctor": "Filter by Doctor",
   "loadData": "Load",
-  "DoctorsAvailability": "Doctor Availability",
-  "RoomNo": "Room No.",
+  "doctorsAvailability": "Doctor Availability",
+  "roomNo": "Room No.",
   "booked": "Booked",
   "standBy": "Stand by",
   "doctorLeave": "Doctor on Leave ",
   "noDoctorAvail": "No Doctors available for the selected criteria",
-  "appDate": "Appo. Date",
-  "appTime": "Appo. Time",
+  "appoDate": "Appo. Date",
+  "appoTime": "Appo. Time",
   "selectStatus": "Select Status",
   "selectSlot": "Select Slots",
   "remarks": "Remarks",
