--- a/client/public/languages/PatientProfile_en.json
+++ b/client/public/languages/PatientProfile_en.json
@@ -26,11 +26,26 @@
   "severity": "Severity",
   "interval": "Interval",
   "created_date": "Ordered Date",
-
+  "chief_cmpln": "Chief Complaint",
+  "hpi_desc": "HPI Description",
+  "hpi_type": "HPI Type",
+  "cmts": "Comments",
+  "chronic": "Chronic",
+  "duration_onset": "Duration / Onset",
+  "lctn": "Location",
+  "qlty": "Quality",
+  "ctx": "Context",
+  "timing": "Timing",
+  "inactive": "Inactive",
+  "ast_symptms": "Associated Symptoms",
+  "mdfyng_fctr": "Modifying Factor",
+  "remarks": "Remarks",
   "visit_code": "Visit Code",
   "select_service": "Select Service",
   "test_type": "Test Type",
-
+  "procedure": "Procedure",
+  "treatment_plan": "Treatment Plan",
+  "sel_a_proc": "Select a Procedure",
   "service_type_id": "Service Type",
   "services_id": "Service",
   "quantity": "Quantity",
@@ -39,6 +54,7 @@
   "discount_percentage": "Discount %",
   "discount_amout": "Discount Amt.",
   "net_amout": "Net Amount",
+  "schld_date": "Scheduled Date",
   "insurance": "Insurance",
   "copay_percentage": "Copay %",
   "copay_amount": "Copay Amt.",
@@ -48,6 +64,7 @@
   "patient_tax": "Patient Tax",
   "company_tax": "Company Tax",
   "total_tax": "Total Tax",
+  "total_price": "Total Price",
   "patient_resp": "Patient Responsible",
   "patient_payable": "Patient Share",
   "comapany_resp": "Company Responsible",
@@ -60,7 +77,22 @@
   "sec_company_paybale": "Secondary Company Share",
   "sec_copay_percntage": "Copay %",
   "sec_copay_amount": "Copay Amt.",
-
+  "prim-insurance": "Primary Insurance",
   "pre_approval": "Pre Approval",
-  "btnsave": "Save"
+  "btnsave": "Save",
+  "responsibility_lbl": "Responsibility",
+  "tax_lbl": "Tax",
+  "payable_lbl": "Payable",
+  "exmn_type": "Examination Type",
+  "exmn_desc": "Examination Description",
+  "exmn": "Examination",
+  "sel_srvc_typ": "Select Service Type",
+  "sel_srvc": "Select Service",
+  "tst_type": "Test Type",
+  "sub_ttl": "Sub Total",
+  "dsct_amt": "Discount Amount",
+  "net_ttl": "Net Total",
+  "pat_payable": "Patient Payable",
+  "co_payable": "Company Payable",
+  "sec_co_payable": "Secondary Company Payable"
 }
