Employee master changes done

--- a/client/public/languages/EmployeeMasterIndex_en.json
+++ b/client/public/languages/EmployeeMasterIndex_en.json
@@ -12,6 +12,7 @@
   "personal_details": "Personal Details",
   "commission_setup": "Commission Setup",
   "deptuser_details": "Department/User",
+  "pay_roll_details": "Pay Roll Details",
 
   "title_id": "Title",
   "arabic_name": "Name in Arabic",
