Employee Registration UI

--- a/client/public/languages/EmployeeMasterIndex_ar.json
+++ b/client/public/languages/EmployeeMasterIndex_ar.json
@@ -1,5 +1,5 @@
 {
-  "employee_master": "سيد الموظف",
+  "employee_master": "تسجيل الموظف",
   "employee_master_settings": "إعدادات",
 
   "employee_code": "رمز الموظف",
