--- a/client/public/languages/EmployeeMasterIndex_en.json
+++ b/client/public/languages/EmployeeMasterIndex_en.json
@@ -1,5 +1,5 @@
 {
-  "employee_master": "Employee Master",
+  "employee_master": "Employee Registration",
   "employee_master_settings": "Settings",
 
   "employee_code": "Employee Code",
