Added Badge status in Sample, Accession and Result Entry

--- a/client/public/languages/AccessionAcknowledgement_ar.json
+++ b/client/public/languages/AccessionAcknowledgement_ar.json
@@ -16,7 +16,7 @@
   "specimen_instruction": "تعليمات عينة",
   "container": "حاوية",
   "collected_by": "جمع بواسطة",
-  "collected_date": "تاريخ الجمع",
+  "collected_date": "أمر التاريخ والوقت",
   "collected_time": "الوقت الذي تم جمعه",
   "required_volume": "حجم المطلوب",
   "no_of_tubes": "Number of pipes",
