--- a/client/public/languages/AccessionAcknowledgement_en.json
+++ b/client/public/languages/AccessionAcknowledgement_en.json
@@ -18,7 +18,7 @@
   "number_of_tests": "Number of Tests",
   "sample_collection": "Accession Acknowledgement",
   "collected_by": "Collected By",
-  "collected_date": "Collected Date",
+  "collected_date": "Collected Date & Time",
   "collected": "Collect",
 
   "btnclose": "Close",
