--- a/client/public/languages/AccessionAcknowledgement_ar.json
+++ b/client/public/languages/AccessionAcknowledgement_ar.json
@@ -5,7 +5,7 @@
   "date_of_birth": "تاريخ الميلاد",
   "age": "العمر",
 
-  "ordered_date": "تاريخ أمر",
+  "ordered_date": "أمر التاريخ والوقت",
   "ordered_by": "أمر بواسطة",
 
   "collect": "مجموعة",
