--- a/client/public/languages/AccessionAcknowledgement_en.json
+++ b/client/public/languages/AccessionAcknowledgement_en.json
@@ -10,7 +10,7 @@
   "investigation_name": "Investigation Name",
   "specimen_name": "Specimen",
   "ordered_by": "Ordered By",
-  "ordered_date": "Ordered Date",
+  "ordered_date": "Ordered Date & Time",
   "ordered_time": "Ordered Time",
   "test_status": "Test Status",
   "case_type": "Case Type",
