Clinical Desk UI fix

--- a/client/public/languages/PatientProfile_en.json
+++ b/client/public/languages/PatientProfile_en.json
@@ -33,10 +33,13 @@
   "chronic": "Chronic",
   "duration_onset": "Duration / Onset",
   "lctn": "Location",
+  "hpiArea": "Area",
   "qlty": "Quality",
   "ctx": "Context",
   "timing": "Timing",
   "inactive": "Inactive",
+  "complaint_status_date": "Complaint Status Date",
+  "chief_complaint_status": "Chief Complaint Status",
   "ast_symptms": "Associated Symptoms",
   "mdfyng_fctr": "Modifying Factor",
   "remarks": "Remarks",
