Leave Report, Business Setup Micro Services

--- a/client/public/languages/ReportsList_en.json
+++ b/client/public/languages/ReportsList_en.json
@@ -14,5 +14,7 @@
   "office_branch": "Office / Branch",
   "appt_status": "Appointment Status",
   "appt_type": "Appointment Type",
-  "service_type_id": "Service Type"
+  "service_type_id": "Service Type",
+  "hims_d_leave_id": "Leave Type",
+  "status": "Status"
 }
