Routed Leave APIs to Micro Services in UI

--- a/client/public/languages/ReportsList_en.json
+++ b/client/public/languages/ReportsList_en.json
@@ -16,5 +16,7 @@
   "appt_type": "Appointment Type",
   "service_type_id": "Service Type",
   "hims_d_leave_id": "Leave Type",
-  "status": "Status"
+  "status": "Status",
+  "month": "Month",
+  "year": "Year"
 }
