--- a/client/public/languages/EmployeeMasterIndex_en.json
+++ b/client/public/languages/EmployeeMasterIndex_en.json
@@ -11,7 +11,7 @@
 
   "personal_details": "Personal Details",
   "commission_setup": "Commission Setup",
-  "deptuser_details": "Department/User",
+  "deptuser_details": "Department Details",
   "pay_roll_details": "Pay Roll Details",
 
   "title_id": "Title",
