OP BIlling changes and leave salary process changes done

--- a/client/public/languages/OPBillingAr_ar.json
+++ b/client/public/languages/OPBillingAr_ar.json
@@ -22,6 +22,7 @@
 
   "select_service": "اختر الخدمة",
   "select_service_type": "اختر نوع الخدمة",
+  "select_visit": "اختر الزيارة",
 
   "gross_total": "المجموع الكلي",
   "advance_adjust": "يعدل",
