--- a/client/public/languages/OPBilling_en.json
+++ b/client/public/languages/OPBilling_en.json
@@ -18,6 +18,7 @@
 
   "select_service": "Select Service",
   "select_service_type": "Select Service Type",
+  "select_visit": "Select Visit",
 
   "gross_total": "Gross Total",
   "advance": "Advance",
