Spelling mistake issue OP Credit Settlement

--- a/client/public/languages/OPCreditSettlement_en.json
+++ b/client/public/languages/OPCreditSettlement_en.json
@@ -1,6 +1,6 @@
 {
-  "form_opcreidt": "OP Creidt Settlement",
-  "form_name": "OP Creidt Settlement",
+  "form_opcreidt": "OP Credit Settlement",
+  "form_name": "OP Credit Settlement",
   "form_home": "Home",
   "form_create": "Create New",
 
