--- a/client/public/languages/PackageSetup_en.json
+++ b/client/public/languages/PackageSetup_en.json
@@ -14,5 +14,6 @@
   "service_id": "Service",
 
   "btnSave": "Save",
-  "btnUpdate": "Update"
+  "btnUpdate": "Update",
+  "screen_name": "Pakage Setup"
 }
