Patient reg arabic changes done

--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -174,5 +174,6 @@
   "booked": "حجز",
   "StandBy": "تعليق",
   "doctorLeave": "طبيب في إجازة",
-  "noDoctorAvail": "لا يوجد أطباء متاحون للمعايير المختارة"
+  "noDoctorAvail": "لا يوجد أطباء متاحون للمعايير المختارة",
+  "lbl_insurance": "تأمين"
 }
