op billing arabic cleanup done

--- a/client/public/languages/OPBilling_ar.json
+++ b/client/public/languages/OPBilling_ar.json
@@ -118,6 +118,8 @@
   "bill_details": "تفاصيل الفاتورة",
   "insurance_details": "تفاصيل التأمين",
 
+  "view_bill_details": "عرض تفاصيل الفاتورة",
+
   "services": "خدمات",
   "percentage": "النسبة المئوية",
   "max_limit": "ماكس الحد",
