--- a/client/public/languages/OPBilling_en.json
+++ b/client/public/languages/OPBilling_en.json
@@ -117,6 +117,8 @@
   "bill_details": "Bill Details",
   "insurance_details": "Insurance Details",
 
+  "view_bill_details": "View Bill Details",
+
   "services": "Services",
   "percentage": "Percentage",
   "max_limit": "Max-Limit",
