Patient Update and warehouse concept done in inventory and pharmacy

--- a/client/public/languages/PharmacySetup_en.json
+++ b/client/public/languages/PharmacySetup_en.json
@@ -22,6 +22,7 @@
   "category_id": "Category",
   "location_type": "Location Type",
   "allow_pos": "Allow POS",
+  "hospital_id": "Division/Branch",
 
   "user_id": "User",
   "from_location": "Location",
