--- a/client/public/languages/InventorySetup_en.json
+++ b/client/public/languages/InventorySetup_en.json
@@ -19,6 +19,7 @@
   "category_id": "Category",
   "location_type": "Location Type",
   "allow_pos": "Allow POS",
+  "hospital_id": "Division/Branch",
 
   "user_id": "User",
   "from_location": "Location",
