--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -155,5 +155,10 @@
   "NotGenerated": "Not Generated",
   "PastVisit": "Past Visit",
   "treatment_plan_id": "Treatment Plan",
-  "lbl_insurance": "Insurance"
+  "lbl_insurance": "Insurance",
+
+  "card_holder_name": "Card Holder Name",
+  "card_holder_age": "Holder Age",
+  "card_holder_gender": "Holder Gender",
+  "card_class": "Card Class"
 }
