--- a/client/public/languages/InvoiceGeneration_en.json
+++ b/client/public/languages/InvoiceGeneration_en.json
@@ -47,5 +47,9 @@
   "plan_desc": "Plan",
   "policy_no": "Policy Number",
   "card_no": "Card Number",
-  "ins_expiry_date": "Expiry Date"
+  "ins_expiry_date": "Expiry Date",
+  "card_holder_name": "Card Holder Name",
+  "card_holder_age": "Holder Age",
+  "card_holder_gender": "Holder Gender",
+  "card_class": "Card Class"
 }
