--- a/client/public/languages/OPBilling_en.json
+++ b/client/public/languages/OPBilling_en.json
@@ -136,5 +136,10 @@
   "payby_card": "Pay by Card",
   "payby_check": "Pay by Cheque",
   "NotGenerated": "Not Generated",
-  "add_new_service": "Add New Services"
+  "add_new_service": "Add New Services",
+
+  "card_holder_name": "Card Holder Name",
+  "card_holder_age": "Holder Age",
+  "card_holder_gender": "Holder Gender",
+  "card_class": "Card Class"
 }
