--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -180,5 +180,6 @@
   "card_holder_name": "إسم صاحب البطاقة",
   "card_holder_age": "حامل العمر",
   "card_holder_gender": "حامل الجنس",
-  "card_class": "فئة البطاقة"
+  "card_class": "فئة البطاقة",
+  "employee_id": "هوية الموظف"
 }
