--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -160,5 +160,6 @@
   "card_holder_name": "Card Holder Name",
   "card_holder_age": "Holder Age",
   "card_holder_gender": "Holder Gender",
-  "card_class": "Card Class"
+  "card_class": "Card Class",
+  "employee_id": "Employee ID"
 }
