--- a/client/public/languages/InvoiceGeneration_en.json
+++ b/client/public/languages/InvoiceGeneration_en.json
@@ -11,8 +11,8 @@
   "unit_cost": "Unit Cost",
   "gross_amount": "Gross Amount",
   "discount_percentage": "Discount %",
-  "discount_amout": "Discount Amt.",
-  "net_amout": "Net Amount",
+  "discount_amount": "Discount Amt.",
+  "net_amount": "Net Amount",
   "insurance": "Insurance",
   "copay_percentage": "Copay %",
   "copay_amount": "Copay Amt.",
@@ -51,5 +51,6 @@
   "card_holder_name": "Card Holder Name",
   "card_holder_age": "Holder Age",
   "card_holder_gender": "Holder Gender",
-  "card_class": "Card Class"
+  "card_class": "Card Class",
+  "trans_from": "Transaction From"
 }
