Bug fixing Sub Ins Master 	Change Transaction No. to Tax Registration Number Network Plan	Remove Polic No. It is twice
OP Billing	On Clicking on insurance details tab, 3rd column, change co_insurance to Services
Doctor's Dashboard	Visit type on the first grid on the right "Todays Patients" is coming as NET VISIT instead of NEW VISIT
Clinical Desk	Order Investigation - > Insurance Flow NOT WORKING, EVERYTHING NEEDS TO BE TESTED
Investigation Master	Radiology Test -> Change Select Template to ADD TEMPLATE
Radiology	Work List-> if the patient is opened once to enter the test result. And we come out of the screen, click on test list. And repeat the process. Data is missing
Radiology	Once Template is selected and data is enetered, All patients get the same data.
Patient Registration	Automatic loading of Picture on selecting Consultation

--- a/client/public/languages/IncentiveSetup_en.json
+++ b/client/public/languages/IncentiveSetup_en.json
@@ -21,7 +21,7 @@
 
   "insurance_sub_code": "Sub Insurance Code",
   "insurance_sub_name": "Sub Insurance Name",
-  "transaction_number": "Transaction Number",
+  "transaction_number": " Tax Registration Number",
   "card_format": "Card Format",
 
   "network_type": "Network Type",
