--- a/client/public/languages/PackageBilling_en.json
+++ b/client/public/languages/PackageBilling_en.json
@@ -126,7 +126,7 @@
   "procedure": "Procedure",
   "dental": "Dental",
   "medicine": "Medicine",
-  "co_insurance": "Co_Insurance",
+  "co_insurance": "Co Insurance",
 
   "btn_save": "Save",
   "btn_clear": "Clear",
