Billing issue done

--- a/client/public/languages/InsuranceSetup_en.json
+++ b/client/public/languages/InsuranceSetup_en.json
@@ -59,7 +59,7 @@
   "trt_max": "OPD Max Limit",
   "deductible_trt": "OPD Deductible",
 
-  "copay_percent_dental": "Debtal Copay",
+  "copay_percent_dental": "Dental Copay",
   "dental_max": "Dental Max Limit",
   "deductible_dental": "Dental Deductible",
 
