--- a/client/public/languages/PatientProfile_en.json
+++ b/client/public/languages/PatientProfile_en.json
@@ -80,7 +80,7 @@
   "sec_company_paybale": "Secondary Company Share",
   "sec_copay_percntage": "Copay %",
   "sec_copay_amount": "Copay Amt.",
-  "prim-insurance": "Primary Insurance",
+  "prim-insurance": "Insurance",
   "pre_approval": "Pre Approval",
   "btnsave": "Save",
   "responsibility_lbl": "Responsibility",
