--- a/client/public/languages/OrderingServices_en.json
+++ b/client/public/languages/OrderingServices_en.json
@@ -24,14 +24,14 @@
   "total_tax": "Total Tax",
   "patient_resp": "Patient Responsible",
   "patient_payable": "Patient Share",
-  "comapany_resp": "Company Responsible",
-  "company_payble": "Company Share",
+  "comapany_resp": "Co. Responsible",
+  "company_payble": "Co. Share",
   "sec_company": "Secondary Insurance",
   "sec_deductable_amount": "Deductable Amt.",
   "sec_deductable_percentage": "Deductable %",
-  "sec_company_res": "Company Responsible",
+  "sec_company_res": "Co. Responsible",
   "sec_company_tax": "Secondary Company Tax",
-  "sec_company_paybale": "Secondary Company Share",
+  "sec_company_paybale": "Secondary Co. Share",
   "sec_copay_percntage": "Copay %",
   "sec_copay_amount": "Copay Amt.",
 
