--- a/client/public/languages/PatientProfile_en.json
+++ b/client/public/languages/PatientProfile_en.json
@@ -70,14 +70,14 @@
   "total_price": "Total Price",
   "patient_resp": "Patient Responsible",
   "patient_payable": "Patient Share",
-  "comapany_resp": "Company Responsible",
-  "company_payble": "Company Share",
+  "comapany_resp": "Co. Responsible",
+  "company_payble": "Co. Share",
   "sec_company": "Secondary Insurance",
   "sec_deductable_amount": "Deductable Amt.",
   "sec_deductable_percentage": "Deductable %",
-  "sec_company_res": "Company Responsible",
+  "sec_company_res": "Co. Responsible",
   "sec_company_tax": "Secondary Company Tax",
-  "sec_company_paybale": "Secondary Company Share",
+  "sec_company_paybale": "Secondary Co. Share",
   "sec_copay_percntage": "Copay %",
   "sec_copay_amount": "Copay Amt.",
   "prim-insurance": "Insurance",
@@ -96,6 +96,6 @@
   "dsct_amt": "Discount Amount",
   "net_ttl": "Net Total",
   "pat_payable": "Patient Payable",
-  "co_payable": "Company Payable",
-  "sec_co_payable": "Secondary Company Payable"
+  "co_payable": "Co. Payable",
+  "sec_co_payable": "Secondary Co. Payable"
 }
