Spelling Changes done

--- a/client/public/languages/Appointment_en.json
+++ b/client/public/languages/Appointment_en.json
@@ -154,7 +154,7 @@
   "refund_caption": "Refund",
 
   "responsibility_lbl": "Responsibility",
-  "tax_lbl": "Tax",
+  "tax_lbl": "Vat",
   "payable_lbl": "Payable",
 
   "patient_lbl": "Patient",
