--- a/client/public/languages/InvoiceGeneration_en.json
+++ b/client/public/languages/InvoiceGeneration_en.json
@@ -40,7 +40,7 @@
   "btn_final": "Finalize and Generate Invoice",
   "btn_clear": "Clear",
   "btn_cash": "Cash Invoice",
-  "btn_creidt": "Creidt Invoice",
+  "btn_creidt": "Credit Invoice",
 
   "insurance_company": "Insurance Co.",
   "sub_insurance_company": "Sub Insurance Co.",
