--- a/client/public/languages/PackageBilling_en.json
+++ b/client/public/languages/PackageBilling_en.json
@@ -99,7 +99,7 @@
   "unbalanced_amount": "Unbalanced Amount",
 
   "responsibility_lbl": "Responsibility",
-  "tax_lbl": "Tax",
+  "tax_lbl": "Vat",
   "payable_lbl": "Payable",
 
   "patient_lbl": "Patient",
