--- a/client/public/languages/PatientProfile_en.json
+++ b/client/public/languages/PatientProfile_en.json
@@ -84,7 +84,7 @@
   "pre_approval": "Pre Approval",
   "btnsave": "Save",
   "responsibility_lbl": "Responsibility",
-  "tax_lbl": "Tax",
+  "tax_lbl": "Vat",
   "payable_lbl": "Payable",
   "exmn_type": "Examination Type",
   "exmn_desc": "Examination Description",
