--- a/client/public/languages/POSCreditSettlement_en.json
+++ b/client/public/languages/POSCreditSettlement_en.json
@@ -1,6 +1,6 @@
 {
-  "form_opcreidt": "POS Creidt Settlement",
-  "form_name": "POS Creidt Settlement",
+  "form_opcreidt": "POS Credit Settlement",
+  "form_name": "POS Credit Settlement",
   "form_home": "Home",
   "form_create": "Create New",
 
